# companion-db

./: CMakeLists.txt  LICENSE  README.md
include/companion/ingest/: ingest_controller.h
include/companion/logging/: logger.h  logger_factory.h  logging_configuration.h
src/: main.cpp
src/ingest/: ingest_controller.cpp
